<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".movie_details.DetailsFragment">

        <ImageView
            android:id="@+id/movieHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/details_header_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/header_placeholder" />

        <ImageButton
            android:id="@+id/downloadImageBtn"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/download_image_icon"
            android:src="@android:drawable/ic_menu_save"
            app:layout_constraintBottom_toBottomOf="@+id/movieHeader"
            app:layout_constraintEnd_toEndOf="@+id/movieHeader" />

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:adjustViewBounds="true"
            android:contentDescription="@string/details_poster_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieHeader"
            tools:src="@drawable/poster_placeholder" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_medium"
            android:textAlignment="viewStart"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@+id/movieHeader"
            tools:text="Avengers: Infinity War" />

        <TextView
            android:id="@+id/releasedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_released_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_default_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movieTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_default_size"
            app:layout_constraintStart_toEndOf="@+id/releasedTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle"
            tools:text="2018-01-01" />

        <Button
            android:id="@+id/watchTrailerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/details_watch_trailer"
            app:layout_constraintStart_toStartOf="@+id/releasedTitle"
            app:layout_constraintTop_toBottomOf="@+id/releasedTitle" />

        <ProgressBar
            android:id="@+id/trailerProgress"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:indeterminate="true"
            android:padding="@dimen/margin_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/watchTrailerBtn"
            app:layout_constraintStart_toEndOf="@+id/watchTrailerBtn"
            app:layout_constraintTop_toTopOf="@+id/watchTrailerBtn" />

        <TextView
            android:id="@+id/overviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/details_overview_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_default_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

        <TextView
            android:id="@+id/overviewContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_large"
            android:textSize="@dimen/text_small_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/overviewTitle"
            app:layout_constraintTop_toBottomOf="@+id/overviewTitle"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>